correction du projet suite a la souttenance ( ajout des ratings, gestion d'erreur de l'url corriger, correction du warning du collapse )

--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -25,15 +25,53 @@
         padding: 10px;
 
         .collapse {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
             .container_collapse {
-                .Button_collapse {
-                    margin: 0;
-                }
-                h4 {
-                    margin: 0;
-                }
+              width: 80%;
+              height: 20px;
+              margin-top: 20px;
+              background-color: #FF6060;
+              color: white;
+              border: none;
+              border-radius: 5px;
+              align-items: center;
+              display: flex;
+              justify-content: space-between;
+              flex-direction: row-reverse;
+              padding : 10px;
+              font-family: Montserrat;
             }
-        }
+            h4 {
+              margin: 0;
+                }
+            h5{
+              width: 79%;
+              background-color: #FBFBFB;
+              box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+              margin-bottom: 20px;
+              padding: 15px;
+              font-family: Montserrat;
+              font-weight: normal;
+            }
+            
+            .Button_collapse {
+              margin: 0;
+              width: 20px;
+              height: 20px;
+              cursor: pointer;
+              border: none;
+              background-color: #FF6060;
+              transition: background-color 0.5s ease, transform 0.5s ease; /* Ajout de la transition de transformation */
+            }
+            
+            .rotate {
+              transform: rotate(180deg); /* Rotation de 180 degrés lorsque le collapse est ouvert */
+            }
+            
+          }
     }
 }
 
@@ -67,7 +105,7 @@
                     }
                 }
 
-                p {
+                h5 {
                     font-size: 12px;
                     width: 95%;
                 }
